---
source: crates/celox/tests/flip_flop.rs
expression: output
---
=== Evaluation Flip-Flops (eval_apply_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, state0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<1>
      r1: logic<1>
      r2: bit<1>
      r4: signed bit<8>
      r8: signed bit<8>
      r10: signed bit<8>
    b0:
      r0 = Load(addr=rst (region=0), offset=0, bits=1)
      r1 = LogicNot r0
      r2 = ToTwoState r1
      Branch(r2 ? b1 : b2)
    b1:
      r4 = SIRValue(0x0)
      Store(addr=a (region=0), offset=0, bits=8, src_reg = 4)
      Store(addr=b (region=0), offset=0, bits=8, src_reg = 4)
      Jump(b3)
    b2:
      r8 = SIRValue(0x1)
      Store(addr=a (region=0), offset=0, bits=8, src_reg = 8)
      r10 = SIRValue(0x2)
      Store(addr=b (region=0), offset=0, bits=8, src_reg = 10)
      Jump(b3)
    b3:
      Return
Trigger Group: rst (AbsoluteAddr(inst0, state1))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<1>
      r1: logic<1>
      r2: bit<1>
      r4: signed bit<8>
      r8: signed bit<8>
      r10: signed bit<8>
    b0:
      r0 = Load(addr=rst (region=0), offset=0, bits=1)
      r1 = LogicNot r0
      r2 = ToTwoState r1
      Branch(r2 ? b1 : b2)
    b1:
      r4 = SIRValue(0x0)
      Store(addr=a (region=0), offset=0, bits=8, src_reg = 4)
      Store(addr=b (region=0), offset=0, bits=8, src_reg = 4)
      Jump(b3)
    b2:
      r8 = SIRValue(0x1)
      Store(addr=a (region=0), offset=0, bits=8, src_reg = 8)
      r10 = SIRValue(0x2)
      Store(addr=b (region=0), offset=0, bits=8, src_reg = 10)
      Jump(b3)
    b3:
      Return

=== Evaluation Flip-Flops (eval_only_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, state0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<1>
      r1: logic<1>
      r2: bit<1>
      r4: signed bit<8>
      r8: signed bit<8>
      r10: signed bit<8>
    b0:
      Commit(src=a (region=0), dst=a (region=1), offset=0, bits=8)
      Commit(src=b (region=0), dst=b (region=1), offset=0, bits=8)
      r0 = Load(addr=rst (region=0), offset=0, bits=1)
      r1 = LogicNot r0
      r2 = ToTwoState r1
      Branch(r2 ? b1 : b2)
    b1:
      r4 = SIRValue(0x0)
      Store(addr=a (region=1), offset=0, bits=8, src_reg = 4)
      Store(addr=b (region=1), offset=0, bits=8, src_reg = 4)
      Jump(b3)
    b2:
      r8 = SIRValue(0x1)
      Store(addr=a (region=1), offset=0, bits=8, src_reg = 8)
      r10 = SIRValue(0x2)
      Store(addr=b (region=1), offset=0, bits=8, src_reg = 10)
      Jump(b3)
    b3:
      Return
Trigger Group: rst (AbsoluteAddr(inst0, state1))
  Execution Unit 0:
    Entry Block: 0
    Registers:
      r0: logic<1>
      r1: logic<1>
      r2: bit<1>
      r4: signed bit<8>
      r8: signed bit<8>
      r10: signed bit<8>
    b0:
      Commit(src=a (region=0), dst=a (region=1), offset=0, bits=8)
      Commit(src=b (region=0), dst=b (region=1), offset=0, bits=8)
      r0 = Load(addr=rst (region=0), offset=0, bits=1)
      r1 = LogicNot r0
      r2 = ToTwoState r1
      Branch(r2 ? b1 : b2)
    b1:
      r4 = SIRValue(0x0)
      Store(addr=a (region=1), offset=0, bits=8, src_reg = 4)
      Store(addr=b (region=1), offset=0, bits=8, src_reg = 4)
      Jump(b3)
    b2:
      r8 = SIRValue(0x1)
      Store(addr=a (region=1), offset=0, bits=8, src_reg = 8)
      r10 = SIRValue(0x2)
      Store(addr=b (region=1), offset=0, bits=8, src_reg = 10)
      Jump(b3)
    b3:
      Return

=== Application Flip-Flops (apply_ffs) ===
Trigger Group: clk (AbsoluteAddr(inst0, state0))
  Execution Unit 0:
    Entry Block: 0
    Registers:
    b0:
      Commit(src=a (region=1), dst=a (region=0), offset=0, bits=8)
      Commit(src=b (region=1), dst=b (region=0), offset=0, bits=8)
      Return
Trigger Group: rst (AbsoluteAddr(inst0, state1))
  Execution Unit 0:
    Entry Block: 0
    Registers:
    b0:
      Commit(src=a (region=1), dst=a (region=0), offset=0, bits=8)
      Commit(src=b (region=1), dst=b (region=0), offset=0, bits=8)
      Return

=== Evaluation Combinational Logic (eval_comb) ===
Execution Unit 0:
  Entry Block: 0
  Registers:
  b0:
    Return
